# ocaml-exercises

./: dune  dune-project  exercises.opam  fifteen_game.ml  fifteen_game.mli
problems/: README.md  at.ml  at.mli  compress.ml  compress.mli  drop.ml  drop.mli  dune  duplicate.ml  duplicate.mli  encode.ml  encode.mli  flatten.ml  flatten.mli  is_palindrome.ml  is_palindrome.mli  last.ml  last.mli  last_two.ml  last_two.mli  length.ml  length.mli  pack.ml  pack.mli  rev.ml  rev.mli  split.ml  split.mli
